--- a/css/index.css
+++ b/css/index.css
@@ -241,7 +241,7 @@ body.dark .github-corner {
 
 .margined .top-margin {
   height: 50px;
-  border-bottom: 2px solid rgb(9, 9, 9);
+  border-bottom: 2px solid #999;
   width: 100%;
   display: block;
   overflow-y: auto;
@@ -251,7 +251,7 @@ body.dark .github-corner {
   width: 50px;
   height: calc(100%);
   display: inline-block;
-  border-right: 2px solid rgb(9, 9, 9);
+  border-right: 2px solid #999;
   top: 0px;
   padding-top: 50px;
   overflow-x: hidden;
