--- a/css/index.css
+++ b/css/index.css
@@ -39,6 +39,26 @@ body.dark {
   src: url(../fonts/Hindi_Type.ttf);
 }
 
+@font-face {
+  font-family: 'Tamil_Font';
+  src: url(../fonts/NotoSansTamil-Regular.ttf);
+}
+
+@font-face {
+  font-family: 'Malayalam_Font';
+  src: url(../fonts/NotoSansMalayalam-Regular.ttf);
+}
+
+@font-face {
+  font-family: 'Telugu_Font';
+  src: url(../fonts/NotoSansTelugu-Regular.ttf);
+}
+
+@font-face {
+  font-family: 'Kannada_Font';
+  src: url(../fonts/NotoSansKannada-Regular.ttf);
+}
+
 /* Default CSS Changes */
 * {
   box-sizing: border-box;
